eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Product_Set__c.object
<CustomObject>
    <fields>
        <fullName>Administration_fee_value__c</fullName>
        <label>Administration fee value %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Administration_fee_value_percentage__c</fullName>
        <label>Administration fee value %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affordability_Percentage__c</fullName>
        <label>Affordability Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_fee_Percentage__c</fullName>
        <label>Agency fee - Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_fees_Value__c</fullName>
        <label>Agency fees - Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allow_CCJs__c</fullName>
        <label>Allow CCJs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_of_application_fee_paid__c</fullName>
        <label>Amount of application fee paid on app</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetorLiability__c</fullName>
        <label>AssetorLiability</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_legal_cost__c</fullName>
        <label>Bank legal cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_condition_rate_percentage__c</fullName>
        <label>Bonus condition rate percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bonus_period_duration__c</fullName>
        <label>Bonus period duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus_period_end_date__c</fullName>
        <label>Bonus period end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cap_bench_percentage__c</fullName>
        <label>Cap %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cap_revert_percentage__c</fullName>
        <label>Cap %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_back_amount__c</fullName>
        <label>Cash back amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_back_percentage__c</fullName>
        <label>Cash back percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cash_card_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash card (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_book_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque book (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clause_6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with HPP CAA offer letter</description>
        <inlineHelpText>ONLY APPLICABLE FOR BTL. Select 6 from the lookup.</inlineHelpText>
        <label>Clause 6</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Standard_Clause__c.Type__c</field>
                <operation>equals</operation>
                <value>BTL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Clause__c</referenceTo>
        <relationshipName>IBB_Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clause_at_the_end_of_5_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with HPP CAA offer letter.</description>
        <inlineHelpText>FOR HPP PRODUCTS ONLY. Select 5.2 from the lookup.</inlineHelpText>
        <label>Clause at the end of 5.2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Standard_Clause__c.Type__c</field>
                <operation>equals</operation>
                <value>HPP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Standard_Clause__c</referenceTo>
        <relationshipName>IBB_Product_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collar_bench_percentage__c</fullName>
        <label>Collar %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Collar_revert_percentage__c</fullName>
        <label>Collar %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conga_AIP_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen AIP Letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Product Sets (Conga AIP Letter)</relationshipLabel>
        <relationshipName>IBB_Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_AIP_MMR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MMR doc</description>
        <label>DocuGen AIP MMR</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Product Sets (Conga AIP MMR)</relationshipLabel>
        <relationshipName>IBB_Product_Sets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Application_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Application Form</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Product Sets (Conga Application Form)</relationshipLabel>
        <relationshipName>IBB_Product_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Welcome_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuGen Welcome Letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipLabel>Product Sets (Conga Welcome Letter)</relationshipLabel>
        <relationshipName>IBB_Product_Sets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <label>Customer Channel</label>
        <picklist>
            <picklistValues>
                <fullName>New customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current account holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building insurance customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_legal_cost__c</fullName>
        <label>Customer legal cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit_card_Available_to_have__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit card (Available to have)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_products_portability__c</fullName>
        <label>Details of products portability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_access_type__c</fullName>
        <label>Distribution/access type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Early_repayment_1_type__c</fullName>
        <label>Early repayment 1 type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_repayment_2_type__c</fullName>
        <label>Early repayment 2 type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_repayment_3_type__c</fullName>
        <label>Early repayment 3 type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charge_1__c</fullName>
        <label>Early repayment charge 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charge_2__c</fullName>
        <label>Early repayment charge 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charge_3__c</fullName>
        <label>Early repayment charge 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Early_repayment_charges__c</fullName>
        <label>Early repayment charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employment_Type_Error__c</fullName>
        <label>Employment Type Error</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipName>IBB_Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_only_letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MMR docs</description>
        <label>Execution only letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Product_Sets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ProductEventDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External ProductEventDirector</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipName>IBB_Product_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Featured_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured_product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees_assistance_percentage__c</fullName>
        <label>Fees assistance percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fees_assistance_value__c</fullName>
        <label>Fees assistance value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Type_Error__c</fullName>
        <label>Finance Type Error</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_product_rate_duration__c</fullName>
        <label>Fixed product rate duration (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_product_rate_until__c</fullName>
        <label>Fixed product rate until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDD_Document__c</fullName>
        <label>IDD Document</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDD_NonF2F_Document__c</fullName>
        <description>MMR IDD</description>
        <label>IDD NonF2F Document</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_payment_types_available__c</fullName>
        <label>Inbound payment types available</label>
        <picklist>
            <picklistValues>
                <fullName>BACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_Multiplier__c</fullName>
        <label>Income Multiplier</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_rate_1__c</fullName>
        <label>Initial rate 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_rate_1_date__c</fullName>
        <label>Initial rate 1 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_rate_1_duration__c</fullName>
        <label>Initial rate 1 duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_rate_2__c</fullName>
        <label>Initial rate 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_rate_2_date__c</fullName>
        <label>Initial rate 2 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_rate_2_duration__c</fullName>
        <label>Initial rate 2 duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_rate_3__c</fullName>
        <label>Initial rate 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_rate_3_date__c</fullName>
        <label>Initial rate 3 date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_rate_3_duration__c</fullName>
        <label>Initial rate 3 duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested in</label>
        <picklist>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy to let</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_product_portable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is product portable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMR_App_Form_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MMR Test</description>
        <inlineHelpText>Only to be used for testing, when live the Conga Setting needs to be linked to the Application Form field. Code look at this existing field so it can&apos;t be changed in advance.</inlineHelpText>
        <label>MMR App Form Test</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Product_Sets7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_fees_Percentage__c</fullName>
        <label>Management fees - Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Management_fees_Value__c</fullName>
        <label>Management fees - Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_bench_percentage__c</fullName>
        <label>Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_cap__c</fullName>
        <label>Margin cap %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_duration__c</fullName>
        <label>Margin duration</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term of product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Margin_duration_fixed_date__c</fullName>
        <label>Margin duration fixed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_duration_term_years__c</fullName>
        <label>Margin duration term (years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_revert_percentage__c</fullName>
        <label>Margin %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Age__c</fullName>
        <label>Max Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_FTV__c</fullName>
        <label>Max FTV</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Finance_Amount__c</fullName>
        <label>Max Finance Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_No_of_Applicants__c</fullName>
        <label>Max No of Applicants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_No_of_BTL_Prop__c</fullName>
        <label>Max No of BTL Prop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_No_of_Incomes__c</fullName>
        <label>Max No of Incomes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Purchase_Price__c</fullName>
        <label>Max Purchase Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Term_of_Finance__c</fullName>
        <label>Max Term of Finance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_amount_IBB_will_pay_toward_legal_fee__c</fullName>
        <label>Max amount IBB will pay toward legal fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_finance_to_value_FTV__c</fullName>
        <label>Max finance to value FTV</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_valuation_fee_bank_will_pay__c</fullName>
        <label>Max valuation fee bank will pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Age__c</fullName>
        <label>Min Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_FTV_BTL__c</fullName>
        <description>Minimum FTV compared between monthly repayment and monthly rental amount</description>
        <label>Min FTV BTL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Finance_Amount__c</fullName>
        <label>Min Finance Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Purchase_Price__c</fullName>
        <label>Min Purchase Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Term_of_Finance__c</fullName>
        <label>Min Term of Finance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_required_for_capital_withdrawl__c</fullName>
        <label>Notice required for capital withdrawl</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_payment_types_available__c</fullName>
        <label>Outbound payment types available</label>
        <picklist>
            <picklistValues>
                <fullName>BACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_amount_currency__c</fullName>
        <label>Penalty charge amount £</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_no_of_days_interest_lost__c</fullName>
        <label>Penalty charge: no of days interest lost</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_percentage__c</fullName>
        <label>Penalty charge %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Penalty_charge_type__c</fullName>
        <label>Penalty charge type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of withdrawl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of all interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of fixed days interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty interest rates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalty_charges__c</fullName>
        <label>Penalty charges</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_of_application_fee_paid__c</fullName>
        <label>% of application fee paid on application</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductSetType__c</fullName>
        <label>Product Set Type</label>
        <picklist>
            <picklistValues>
                <fullName>HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Switch_Advice_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Switch Advice Director</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipLabel>Product Sets (Product Switch Advice Director)</relationshipLabel>
        <relationshipName>Product_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Switch_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Switch Director</label>
        <referenceTo>ProductEventDirector__c</referenceTo>
        <relationshipName>IBB_Product_Sets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Term Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_expiry_date__c</fullName>
        <label>Product expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_live_date__c</fullName>
        <label>Product live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_recommendation_letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MMR docs</description>
        <label>Product recommendation letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Product_Sets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_recommendation_rejected_letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For MMR docs</description>
        <label>Product recommendation rejected letter</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBB_Product_Sets6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_withdraw_date__c</fullName>
        <label>Product withdraw date</label>
        <type>Date</type>
    </fields>
</CustomObject>